
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int objset_t ;
typedef int nvlist_t ;
typedef int dsl_crypto_params_t ;
typedef int dmu_objset_type_t ;
typedef scalar_t__ boolean_t ;


 int B_FALSE ;
 int DCP_CMD_NONE ;
 int EACCES ;
 int EINVAL ;
 int VERIFY0 (int ) ;
 int WRAPPING_KEY_LEN ;
 int ZFS_MAX_DATASET_NAME_LEN ;
 int dmu_objset_own (char const*,int ,scalar_t__,scalar_t__,void*,int **) ;
 int dsl_crypto_params_create_nvlist (int ,int *,int *,int **) ;
 int dsl_crypto_params_free (int *,int ) ;
 int fnvlist_add_uint8_array (int *,char*,int *,int ) ;
 int * fnvlist_alloc () ;
 int fnvlist_free (int *) ;
 int spa_keystore_load_wkey (char*,int *,int ) ;
 char* strchr (char*,char) ;
 int strcpy (char*,char const*) ;
 char* strrchr (char*,char) ;
 scalar_t__ ztest_wkeydata ;

__attribute__((used)) static int
ztest_dmu_objset_own(const char *name, dmu_objset_type_t type,
    boolean_t readonly, boolean_t decrypt, void *tag, objset_t **osp)
{
 int err;
 char *cp = ((void*)0);
 char ddname[ZFS_MAX_DATASET_NAME_LEN];

 strcpy(ddname, name);
 cp = strchr(ddname, '@');
 if (cp != ((void*)0))
  *cp = '\0';

 err = dmu_objset_own(name, type, readonly, decrypt, tag, osp);
 while (decrypt && err == EACCES) {
  dsl_crypto_params_t *dcp;
  nvlist_t *crypto_args = fnvlist_alloc();

  fnvlist_add_uint8_array(crypto_args, "wkeydata",
      (uint8_t *)ztest_wkeydata, WRAPPING_KEY_LEN);
  VERIFY0(dsl_crypto_params_create_nvlist(DCP_CMD_NONE, ((void*)0),
      crypto_args, &dcp));
  err = spa_keystore_load_wkey(ddname, dcp, B_FALSE);
  dsl_crypto_params_free(dcp, B_FALSE);
  fnvlist_free(crypto_args);

  if (err == EINVAL) {






   cp = strrchr(ddname, '/');
   if (cp == ((void*)0))
    return (err);

   *cp = '\0';
   err = EACCES;
   continue;
  } else if (err != 0) {
   break;
  }

  err = dmu_objset_own(name, type, readonly, decrypt, tag, osp);
  break;
 }

 return (err);
}
